Fixing small-screen checkbox label alignments

--- a/src/_scss/pages/search/filters/awardType/_sharedAwardStyle.scss
+++ b/src/_scss/pages/search/filters/awardType/_sharedAwardStyle.scss
@@ -24,6 +24,7 @@
             font-size: $small-font-size;
             line-height: $small-font-size;
             margin: 1rem 0 0 0;
+            width: 80%;
 
             &:before {
                 width: 1.4rem;
